tests/cases/smoke/invalid/error_raise_without_throws_or_catch.dp
record FileError {
    path: str
    reason: str
}

func run() -> none {
    raise FileError {
        path: "x"
        reason: "boom"
    }
}
